update libs path

--- a/blocks/highlight/_theme/highlight_theme_sunburst.less
+++ b/blocks/highlight/_theme/highlight_theme_sunburst.less
@@ -1,3 +1,3 @@
 .highlight_theme_sunburst {
-  // @import "../../../bower_components/highlight.js/src/styles/sunburst.css";
+  // @import "../../../libs/highlight.js/src/styles/sunburst.css";
 }
