--- a/blocks/highlight/_theme/highlight_theme_arta.less
+++ b/blocks/highlight/_theme/highlight_theme_arta.less
@@ -1,3 +1,3 @@
 .highlight_theme_arta {
-  // @import "../../../bower_components/highlight.js/src/styles/arta.css";
+  // @import "../../../libs/highlight.js/src/styles/arta.css";
 }
