--- a/blocks/highlight/_theme/highlight_theme_ascetics.less
+++ b/blocks/highlight/_theme/highlight_theme_ascetics.less
@@ -1,3 +1,3 @@
 ﻿.highlight_theme_ascetics {
-  // @import "../../../bower_components/highlight.js/src/styles/ascetics.css";
+  // @import "../../../libs/highlight.js/src/styles/ascetics.css";
 }
