--- a/blocks/highlight/_theme/highlight_theme_brown-paper.less
+++ b/blocks/highlight/_theme/highlight_theme_brown-paper.less
@@ -1,3 +1,3 @@
 .highlight_theme_brown-paper {
-  // @import "../../../bower_components/highlight.js/src/styles/brown-paper.css";
+  // @import "../../../libs/highlight.js/src/styles/brown-paper.css";
 }
