--- a/blocks/highlight/_theme/highlight_theme_dark.less
+++ b/blocks/highlight/_theme/highlight_theme_dark.less
@@ -1,3 +1,3 @@
 .highlight_theme_dark {
-  // @import "../../../bower_components/highlight.js/src/styles/dark.css";
+  // @import "../../../libs/highlight.js/src/styles/dark.css";
 }
