--- a/blocks/highlight/_theme/highlight_theme_docco.less
+++ b/blocks/highlight/_theme/highlight_theme_docco.less
@@ -1,3 +1,3 @@
 .highlight_theme_docco {
-  // @import "../../../bower_components/highlight.js/src/styles/docco.css";
+  // @import "../../../libs/highlight.js/src/styles/docco.css";
 }
