--- a/blocks/highlight/_theme/highlight_theme_far.less
+++ b/blocks/highlight/_theme/highlight_theme_far.less
@@ -1,3 +1,3 @@
 .highlight_theme_far {
- // @import "../../../bower_components/highlight.js/src/styles/far.css";
+ // @import "../../../libs/highlight.js/src/styles/far.css";
 }
