--- a/blocks/highlight/_theme/highlight_theme_foundation.less
+++ b/blocks/highlight/_theme/highlight_theme_foundation.less
@@ -1,3 +1,3 @@
 .highlight_theme_foundation {
-  // @import "../../../bower_components/highlight.js/src/styles/foundation.css";
+  // @import "../../../libs/highlight.js/src/styles/foundation.css";
 }
