--- a/blocks/highlight/_theme/highlight_theme_github.less
+++ b/blocks/highlight/_theme/highlight_theme_github.less
@@ -1,3 +1,3 @@
 .highlight_theme_github {
-  // @import "../../../bower_components/highlight.js/src/styles/github.css";
+  // @import "../../../libs/highlight.js/src/styles/github.css";
 }
