--- a/blocks/highlight/_theme/highlight_theme_mono-blue.less
+++ b/blocks/highlight/_theme/highlight_theme_mono-blue.less
@@ -1,3 +1,3 @@
 .highlight_theme_googlecode {
-  // @import "../../../bower_components/highlight.js/src/styles/googlecode.css";
+  // @import "../../../libs/highlight.js/src/styles/googlecode.css";
 }
