--- a/blocks/highlight/_theme/highlight_theme_school-book.less
+++ b/blocks/highlight/_theme/highlight_theme_school-book.less
@@ -1,3 +1,3 @@
 .highlight_theme_school-book {
-  //@import "../../../bower_components/highlight.js/src/styles/school_book.css";
+  //@import "../../../libs/highlight.js/src/styles/school_book.css";
 }
