--- a/blocks/highlight/_theme/highlight_theme_solarized-dark.less
+++ b/blocks/highlight/_theme/highlight_theme_solarized-dark.less
@@ -1,3 +1,3 @@
 .highlight_theme_solarized-dark {
-  // @import "../../../bower_components/highlight.js/src/styles/solarized_dark.css";
+  // @import "../../../libs/highlight.js/src/styles/solarized_dark.css";
 }
