--- a/blocks/highlight/_theme/highlight_theme_solarized-light.less
+++ b/blocks/highlight/_theme/highlight_theme_solarized-light.less
@@ -1,3 +1,3 @@
 .highlight_theme_solarized-light {
-  // @import "../../../bower_components/highlight.js/src/styles/solarized_light.css";
+  // @import "../../../libs/highlight.js/src/styles/solarized_light.css";
 }
