--- a/blocks/highlight/_theme/highlight_theme_tomorrow-night-bright.less
+++ b/blocks/highlight/_theme/highlight_theme_tomorrow-night-bright.less
@@ -1,3 +1,3 @@
 .highlight_theme_tomorrow-night-bright {
-  // @import "../../../bower_components/highlight.js/src/styles/tomorrow-night-bright.css";
+  // @import "../../../libs/highlight.js/src/styles/tomorrow-night-bright.css";
 }
