--- a/blocks/highlight/_theme/highlight_theme_tomorrow-night-eighties.less
+++ b/blocks/highlight/_theme/highlight_theme_tomorrow-night-eighties.less
@@ -1,3 +1,3 @@
 .highlight_theme_tomorrow-night-eighties {
-  // @import "../../../bower_components/highlight.js/src/styles/tomorrow-night-eighties.css";
+  // @import "../../../libs/highlight.js/src/styles/tomorrow-night-eighties.css";
 }
