--- a/blocks/highlight/_theme/highlight_theme_tomorrow-night.less
+++ b/blocks/highlight/_theme/highlight_theme_tomorrow-night.less
@@ -1,3 +1,3 @@
 .highlight_theme_tomorrow-night {
-  // @import "../../../bower_components/highlight.js/src/styles/tomorrow-night.css";
+  // @import "../../../libs/highlight.js/src/styles/tomorrow-night.css";
 }
