--- a/blocks/highlight/_theme/highlight_theme_tomorrow.less
+++ b/blocks/highlight/_theme/highlight_theme_tomorrow.less
@@ -1,3 +1,3 @@
 .highlight_theme_tomorrow {
-  // @import "../../../bower_components/highlight.js/src/styles/tomorrow.css";
+  // @import "../../../libs/highlight.js/src/styles/tomorrow.css";
 }
