--- a/blocks/highlight/_theme/highlight_theme_vs.less
+++ b/blocks/highlight/_theme/highlight_theme_vs.less
@@ -1,3 +1,3 @@
 .highlight_theme_vs {
-  // @import "../../../bower_components/highlight.js/src/styles/vs.css";
+  // @import "../../../libs/highlight.js/src/styles/vs.css";
 }
