--- a/blocks/highlight/_theme/highlight_theme_xcode.less
+++ b/blocks/highlight/_theme/highlight_theme_xcode.less
@@ -1,3 +1,3 @@
 .highlight_theme_xcode {
-  // @import "../../../bower_components/highlight.js/src/styles/xcode.css";
+  // @import "../../../libs/highlight.js/src/styles/xcode.css";
 }
