--- a/blocks/highlight/_theme/highlight_theme_zenburn.less
+++ b/blocks/highlight/_theme/highlight_theme_zenburn.less
@@ -1,3 +1,3 @@
 .highlight_theme_zenburn {
-  // @import "../../../bower_components/highlight.js/src/styles/zenburn.css";
+  // @import "../../../libs/highlight.js/src/styles/zenburn.css";
 }
