--- a/blocks/highlight/highlight.less
+++ b/blocks/highlight/highlight.less
@@ -1,3 +1,3 @@
 .highlight {
-  //@import "../../bower_components/highlight.js/src/styles/default.css";
+  //@import "../../libs/highlight.js/src/styles/default.css";
 }
